uefi-macros/tests/ui/fail/entry_bad_async.rs
#![no_main]

use uefi::prelude::*;

#[entry]
async fn main() -> Status {
    Status::SUCCESS
}
