uefi-macros/tests/ui/fail/entry_bad_async.stderr
error: Entry function should not be async
 --> tests/ui/fail/entry_bad_async.rs:6:1
  |
6 | async fn main() -> Status {
  | ^^^^^
